# INFO_RECAP

./: README.md
config/universes/: example_universe.txt  games.txt
data/: ingest_games.csv  ingest_games_20251224_192628.csv  ingest_games_20251224_192628_errors.csv  ingest_games_20251224_193045.csv  ingest_games_20251224_193045_errors.csv  ingest_games_20251224_193256.csv  ingest_games_20251224_193650.csv  ingest_games_20251224_202918.csv  rss_cache.json
docs/: architecture.md
rss_ml/: README.md  pyproject.toml
rss_ml/data/: articles_features.csv  articles_raw.csv  cache.sqlite  dataset.parquet  feeds.txt
rss_ml/rss_ml/: __init__.py  config.py
rss_ml/rss_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rss_ml/rss_ml/ingest/: extract.py  feeds.py  fetch.py
rss_ml/rss_ml/ml/: cluster.py  cluster_summarize.py  dataset.py
rss_ml/rss_ml/nlp/: classify.py  embed.py  language.py  summarize.py
rss_ml/rss_ml/pipeline/: run.py
rss_ml/rss_ml/store/: articles_csv.py  cache.py  clusters_csv.py
rss_ml/rss_ml/ui/: progress.py  reader.py
src/: cli.py  config.py
src/ingest/: __init__.py  html_cleaner.py  rss_reader.py
src/nlp/: __init__.py  lang_detect.py
src/pipeline/: __init__.py  orchestrator.py
src/utils/: progress.py
