[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-ml"
version = "0.1.0"
description = "RSS ingestion, NLP features, clustering, and CLI reader."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<0.13",
    "rich>=13,<14",
    "feedparser>=6,<7",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5,<6",
    "pandas>=2,<3",
    "sentence-transformers>=2.7,<3",
    "transformers>=4.36,<5",
    "torch>=2.1,<3",
    "hdbscan>=0.8,<0.9",
    "scikit-learn>=1.3,<1.6",
]

[project.optional-dependencies]
dev = ["python-dotenv"]
fasttext = ["fasttext>=0.9.2"]
textual = ["textual>=0.57,<0.59"]

[project.scripts]
rssml = "rss_ml.pipeline.run:app"

[tool.setuptools.packages.find]
include = ["rss_ml*"]
exclude = ["data*"]
